Add Apache HTTP client dependency and proper logging for AWS SDK v2

--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,27 @@
         <localstack.version>0.2.25</localstack.version>
     </properties>
     <dependencies>
-        <!-- AWS SDK v1 -->
+        <!-- AWS SDK v2 -->
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>s3</artifactId>
             <version>${aws.sdk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>apache-client</artifactId>
+            <version>${aws.sdk.version}</version>
+        </dependency>
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.36</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.13</version>
         </dependency>
         <!-- JUnit 5 -->
         <dependency>
